--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "prop-types": "^15.6.2"
   }
 }
